# smart-cooler-monitor

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  check_cameras.py  docker-compose.yml  main.py  products.json  pyproject.toml  requirements.txt  simple_camera_test.py  test_cameras_fixed.py  yolo.ipynb
app/: extractor.py  products.json  record.py
config/: settings.py
core/: camera_detector.py  camera_manager.py  display_manager.py  product_manager.py  video_recorder.py
record.py/: extractor.py  products.json  record.py
templates/: index.html
utils/: exceptions.py  logger.py
