[tool.poetry]
name = "smartcooler-camera-monitor"
version = "0.1.0"
description = ""
authors = ["MarcoS329612 <a329612@uach.mx>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.0.0"
opencv-python = "^4.8.0"
numpy = "^1.24.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"